# seedir

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  command_line.py  examples.ipynb  pdoc_command.txt  pyproject.toml  setup.py  stackoverflow.txt
.github/workflows/: deploy_pypi.yml  deploy_testpypi.yml  test.yml
.ipynb_checkpoints/: examples-checkpoint.ipynb
docs/: errors.html  gettingstarted.md  index.html  printing.html  seedir.html
docs/seedir/: errors.html  fakedir.html  folderstructure.html  folderstructurehelpers.html  index.html  printing.html  realdir.html  seedir.html  seedir_testing.html
docs/templates/: config.mako  css.mako
img/: seedir_diagram.pptx
seedir/: __init__.py  __main__.py  __version__.py  command_line.py  errors.py  fakedir.py  folderstructure.py  folderstructurehelpers.py  gettingstarted.md  printing.py  realdir.py  seedir.py
src/: .gitignore  fakedir.py  printing.py  seedir.py
tests/: __init__.py  print_examples.py  test_seedir.py  tests.py
